test_suite/tests/ui/common/validate_without_parenthesis.stderr
error: `validate` must be used with parenthesis.
       For example:

           validate(less_or_equal = 99)

 --> tests/ui/common/validate_without_parenthesis.rs:3:10
  |
3 | #[nutype(validate)]
  |          ^^^^^^^^
